<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.leejh.hanul.stylus.lite.howActivity"
    android:background="@drawable/background">

    <ScrollView
        android:id = "@+id/first_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="20dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id = "@+id/first_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/how_1"
                android:textSize="19sp" />


            <TextView
                android:id = "@+id/first_2"
                android:layout_below="@+id/first_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/how_2"
                android:textSize="19sp" />

            <TextView
                android:textColor="#1ae8a4"
                android:id = "@+id/first_2_sub"
                android:layout_below="@+id/first_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/how_2_sub"
                android:textSize="12sp" />

            <TextView
                android:id = "@+id/first_3"
                android:layout_below="@+id/first_2_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/how_3"
                android:textSize="19sp" />

            <TextView
                android:textColor="#1ae8a4"
                android:id = "@+id/first_3_sub"
                android:layout_below="@+id/first_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/how_3_sub"
                android:textSize="12sp" />



            <ImageView
                android:id = "@+id/p2"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/first_3_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/p2"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_centerHorizontal="true"
              />

            <ImageView
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/p1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="40dp"/>


        </RelativeLayout>
    </ScrollView>



    <ImageButton
        android:id = "@+id/button01"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:scaleType = "centerInside"
        android:background="#00000000"
        android:src="@drawable/selector2"/>



</RelativeLayout>
